--- a/freshdb/package.json
+++ b/freshdb/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
+    "mysql2": "^3.15.3",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
