--- a/freshdb/package.json
+++ b/freshdb/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.556.0",
     "mysql2": "^3.15.3",
     "next": "16.0.8",
+    "next-auth": "^4.24.13",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "tailwind-merge": "^3.4.0"
